testsuite/tests/contrib/lkt_semantic/char/test.lkt
val a: String = "lol"
val b: Char = 'l'
val c: Char = a(1)
